--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,32 +1,38 @@
 {
   "nav_home": "Главная",
   "nav_about": "О нас",
-  "nav_gallery": "Галерея",
-  "nav_services": "Услуги",
+  "nav_atelier": "Ателье",
+  "nav_clothing": "Одежда",
+  "nav_painting": "Принты",
   "nav_contact": "Контакты",
-  "hero_title": "Дизайн. Качество. Внимание к деталям",
-  "hero_subtitle": "В нашей студии каждая вещь имеет душу",
+
+  "hero_title": "Дизайн. Качество. Внимание к деталям.",
+  "hero_subtitle": "В нашей студии каждая вещь имеет душу.",
   "hero_cta": "Связаться с нами",
+
   "about_title": "О мастерской",
-  "about_text": "Мы создаём одежду на заказ с вниманием к каждой детали. Индивидуальный подход, качественные ткани и душа в каждом стежке",
-  "gallery_title": "Галерея",
-  "services_title": "Наши услуги",
-  "services_sewing": "Пошив одежды на заказ",
-  "services_repair": "Ремонт и подгонка",
-  "services_textile": "Текстиль для дома",
+"about_text": "Семейная студия, специализирующаяся на индивидуальном пошиве с более чем 20-летним опытом. Мы уделяем внимание качеству, персональному подходу и каждой детали, чтобы каждая вещь стала произведением искусства.",
+
   "contact_title": "Связаться с нами",
-  "contact_subtitle": "Мы будем рады обсудить ваш проект",
+  "contact_subtitle": "Мы будем рады обсудить ваш проект.",
+  "contact_alt_text": "Или свяжитесь с нами напрямую:",
+
   "form_name": "Ваше имя",
   "form_email": "Электронная почта",
   "form_message": "Сообщение",
   "form_send": "Отправить",
+
   "services_title": "Наши услуги",
   "services_tailoring": "Пошив одежды на заказ",
-  "services_tailoring_desc": "Одежда по меркам и стилю клиента",
+  "services_tailoring_desc": "Одежда по меркам и индивидуальному стилю.",
   "services_evening_dresses": "Вечерние платья",
-  "services_evening_dresses_desc": "Элегантные платья, созданные для особых случаев",
+  "services_evening_dresses_desc": "Элегантные платья для особых случаев.",
   "services_repairs": "Ремонт и подгонка",
-  "services_repairs_desc": "Укорачивание, удлинение, замена молний и другие доработки",
+  "services_repairs_desc": "Укорачивание, удлинение, замена молний и другие доработки.",
   "services_home_decor": "Текстиль для дома",
-  "services_home_decor_desc": "Шторы, подушки, скатерти и индивидуальный текстиль для интерьера"
+  "services_home_decor_desc": "Шторы, подушки, скатерти и текстиль на заказ для вашего дома.",
+
+  "atelier_title": "В мастерской",
+  "clothing_title": "Коллекция одежды",
+  "painting_title": "Тканевые принты"
 }
