--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -1,32 +1,39 @@
 {
   "nav_home": "בית",
   "nav_about": "אודות",
-  "nav_gallery": "גלריה",
-  "nav_services": "שירותים",
+  "nav_atelier": "הסטודיו",
+  "nav_clothing": "ביגוד",
+  "nav_painting": "הדפסים",
   "nav_contact": "צור קשר",
-  "hero_title": "עיצוב אישי. איכות. תשומת לב לפרטים",
-  "hero_subtitle": "בסטודיו שלנו כל בגד מקבל נשמה",
+
+  "hero_title": "עיצוב אישי. איכות. תשומת לב לפרטים.",
+  "hero_subtitle": "בסטודיו שלנו, כל בגד מקבל נשמה.",
   "hero_cta": "דברו איתנו",
+
   "about_title": "על הסטודיו",
-  "about_text": "אנחנו יוצרים בגדים בהתאמה אישית עם תשומת לב לכל פרט. גישה אישית, בדים איכותיים ונשמה בכל תפר",
-  "gallery_title": "גלריה",
-  "services_title": "השירותים שלנו",
-  "services_sewing": "תפירה בהתאמה אישית",
-  "services_repair": "תיקונים והתאמות",
-  "services_textile": "טקסטיל לבית",
+  "about_text": "סטודיו משפחתי המתמחה בתפירה אישית, עם ניסיון של למעלה מ-20 שנה בתחום. אנו מקפידים על איכות, שירות אישי, והקפדה על כל פרט קטן כדי להפוך כל בגד ליצירת אמנות.",
+
   "contact_title": "צרו קשר",
-  "contact_subtitle": "נשמח לשמוע על הפרויקט שלכם",
+  "contact_subtitle": "נשמח לשמוע על הפרויקט שלכם.",
+  "contact_alt_text": "או פנו אלינו ישירות:",
+
   "form_name": "השם שלך",
   "form_email": "דוא\"ל",
   "form_message": "הודעה",
   "form_send": "שליחה",
+
   "services_title": "השירותים שלנו",
   "services_tailoring": "תפירה בהתאמה אישית",
-  "services_tailoring_desc": "בגדים לפי מידה וסגנון אישי",
+  "services_tailoring_desc": "בגדים לפי מידה וסגנון אישי.",
   "services_evening_dresses": "שמלות ערב",
-  "services_evening_dresses_desc": "שמלות אלגנטיות לאירועים מיוחדים",
+  "services_evening_dresses_desc": "שמלות אלגנטיות לאירועים מיוחדים.",
   "services_repairs": "תיקונים והתאמות",
-  "services_repairs_desc": "הצרות, הארכות, רוכסנים ועוד",
+  "services_repairs_desc": "הצרות, הארכות, תיקוני רוכסנים ועוד.",
   "services_home_decor": "עיצוב לבית",
-  "services_home_decor_desc": "וילונות, כריות, מפות וטקסטיל בהתאמה אישית לבית"
+  "services_home_decor_desc": "וילונות, כריות, מפות וטקסטיל בהתאמה אישית לבית.",
+
+  "atelier_title": "הסטודיו שלנו בפעולה",
+  "clothing_title": "עבודות תפירה",
+  "painting_title": "הדפסי בדים"
+  
 }
